--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "build": "eleventy",
-    "start": "netlify dev"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
